--- a/homework/src/index.html
+++ b/homework/src/index.html
@@ -13,11 +13,16 @@
   <title>HYF-GITHUB</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Play" rel="stylesheet">
 </head>
 
 <body>
   <div id="root"></div>
   <script src="./index.js"></script>
 </body>
-
+<footer id ="footer">
+  <p>Created by: Louise Francois</p>
+  <p> <a href="https://github.com/lfcoding1?tab=repositories">
+  Check out my Repositories here</a>.</p>
+</footer>
 </html>
