--- a/homework/src/index.html
+++ b/homework/src/index.html
@@ -18,8 +18,10 @@
 
 <body>
   <div id="root"></div>
-  <script src="./index.js"></script>  
- 
+  <script src="./App.js"></script>
+  <script src="./Contributor.js"></script>
+  <script src="./Util.js"></script> 
+  <script src="./Repository.js"></script> 
 
 </body>
 <footer id ="footer">
