--- a/Week3/homework/src/index.html
+++ b/Week3/homework/src/index.html
@@ -18,7 +18,13 @@
 
 <body>
   <div id="root"></div>
-  <script src="./index.js"></script>
+  <script src="./App.js"></script>
+ <script src="./Contributor.js"></script>
+<script src="./Util.js"></script> 
+ <script src="./Repository.js"></script> 
+
+
+ 
 </body>
 <footer id ="footer">
   <p>Created by: Louise Francois</p>
